--- a/SqlBuilder.DataServices.UnitTest/packages.config
+++ b/SqlBuilder.DataServices.UnitTest/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="FakeItEasy" version="5.1.0" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net452" />
   <package id="SqlBuilder" version="1.3.0" targetFramework="net461" />
 </packages>
