--- a/SqlBuilder.DataServices.UnitTest/SqlBuilder.DataServices.UnitTest.csproj
+++ b/SqlBuilder.DataServices.UnitTest/SqlBuilder.DataServices.UnitTest.csproj
@@ -48,18 +48,25 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.4.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="SqlBuilder, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\SqlBuilder.1.3.0\lib\net452\SqlBuilder.dll</HintPath>
+    <Reference Include="SqlBuilder, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SqlBuilder.1.7.0\lib\net452\SqlBuilder.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssertExtensions.cs" />
     <Compile Include="ConnectionFactoryTests.cs" />
     <Compile Include="GridReaderWrapperTests.cs" />
+    <Compile Include="IExecuteExtensionsTests.cs" />
+    <Compile Include="ObjectHelper.cs" />
     <Compile Include="SqlAccessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlRetryTests.cs" />
+    <Compile Include="TransientErrorDetectionStrategyTests.cs" />
+    <Compile Include="ModelDataServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
